# arkan

./: README.md  TODO  com.github.yursan9.Arkan.json  meson.build  python3-requests.json
data/: com.github.yursan9.Arkan.appdata.xml.in  com.github.yursan9.Arkan.desktop.in  com.github.yursan9.Arkan.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: arkan.gresource.xml  arkan.in  main.py  meson.build  window.py  window.ui
src/backends/: manager.py
src/ui/: locationpopover.ui  shalatlist.ui  shalatlistrow.ui  shalatoverview.ui  window.ui
src/widgets/: locationpopover.py  shalatlist.py  shalatlistrow.py  shalatoverview.py
